[package]
name = "steam-auth"
authors = ["Matt Taylor"]
version = "1.0.0"
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Allows you to implement a 'login with steam' feature on your website."
repository = "https://github.com/64/steam-auth"
documentation = "https://docs.rs/steam-auth"
keywords = ["steam", "login", "authentication", "authenticate", "openid"]
categories = ["authentication", "asynchronous", "network-programming", "web-programming"]

[dependencies]
reqwest = "0.11.4"
futures = "0.3.15"
url = "2.2.2"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_urlencoded = "0.7.0"
failure = "0.1.8"

[dev-dependencies]
simple-server = "0.4.0"
